Comentário/anotação Local: método DELETE
