# storage/api-docs/api-docs.yaml
@@ -131,6 +131,32 @@ paths:
           description: Unauthenticated
         422:
           description: 'Unprocessable Entity'
+    delete:
+      tags:
+        - Posts
+      summary: 'Delete existing post'
+      description: 'Deletes a record and returns no content'
+      operationId: deletePost
+      parameters:
+        -
+          name: post
+          in: path
+          description: 'Post id'
+          required: true
+          schema:
+            type: integer
+      responses:
+        204:
+          description: 'Successful operation'
+          content:
+            application/json:
+              schema: []
+        401:
+          description: Unauthenticated
+        403:
+          description: Forbidden
+        404:
+          description: 'Resource Not Found'
 tags:
   -
     name: Posts
